--- a/9_agent_real_time_stock_price.ipynb
+++ b/9_agent_real_time_stock_price.ipynb
@@ -468,6 +468,8 @@
     "---\n",
     "\n",
     "### **Trace Overview**\n",
+    "> **Note:** GitHub’s notebook preview strips most custom HTML/CSS, so the screenshots below may appear **stacked vertically** here.\n",
+    "> For the intended **side-by-side** layout, open this notebook locally in **Jupyter** or **VS Code**.\n",
     "<div style=\"display:grid; grid-template-columns: 1fr 1fr; gap: 14px; user-select:none; -webkit-user-select:none; -moz-user-select:none; -ms-user-select:none;\">\n",
     "\n",
     "  <!-- Row 1: Full-width overview -->\n",
@@ -511,6 +513,14 @@
     "</div>\n"
    ],
    "id": "e2c7f5ae51e9771c"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "6b0bd31c75fd1ffa"
   }
  ],
  "metadata": {
